// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Basic should match the snapshot 1`] = `
<div>
  <div
    aria-labelledby="alert-basic-should-match-the-snapshot-0"
    aria-live="polite"
    class="brd-c-hzAqKw brd-c-hzAqKw-lcPgHC-size-lg brd-c-hzAqKw-dDDEqJ-variant-info"
    role="status"
  >
    <div
      class="brd-c-bZNrxE"
    >
      <div
        class="brd-c-deZXRM"
      >
        <div
          class="brd-c-jeVcRd"
          role="presentation"
        >
          <i
            data-testid="mock-icon-Info"
          />
        </div>
        <div
          class="brd-c-fNvXDc"
          id="alert-basic-should-match-the-snapshot-0"
        >
          <div
            class="brd-c-ehEcEk"
          >
            OpenDoc
          </div>
          <div
            class="brd-c-jUtCOJ"
          >
            A Possibility in the Computing World Suppressed by Steve Jobs.
          </div>
        </div>
        <button
          aria-label="Dismiss Button"
          class="brd-c-iYqWMG brd-c-iYqWMG-eWWUXK-btnType-text brd-c-iYqWMG-lKjfQ-size-md brd-c-PJLV"
          role="button"
          type="button"
        >
          <i
            data-testid="mock-icon-Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert MessageOnly should match the snapshot 1`] = `
<div>
  <div
    aria-labelledby="alert-messageonly-should-match-the-snapshot-0"
    aria-live="assertive"
    class="brd-c-hzAqKw brd-c-hzAqKw-dzGVlg-size-sm brd-c-hzAqKw-dznTNE-variant-error"
    role="alert"
  >
    <div
      class="brd-c-bZNrxE"
    >
      <div
        class="brd-c-deZXRM"
      >
        <div
          class="brd-c-jeVcRd"
          role="presentation"
        >
          <i
            data-testid="mock-icon-CloseOne"
          />
        </div>
        <div
          class="brd-c-fNvXDc"
        >
          <div
            class="brd-c-jUtCOJ"
            id="alert-messageonly-should-match-the-snapshot-0"
          >
            Oops! Something went wrong.
          </div>
        </div>
        <button
          aria-label="Dismiss Button"
          class="brd-c-iYqWMG brd-c-iYqWMG-eWWUXK-btnType-text brd-c-iYqWMG-lKjfQ-size-md brd-c-PJLV"
          role="button"
          type="button"
        >
          <i
            data-testid="mock-icon-Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert WithAction should match the snapshot 1`] = `
<div>
  <div
    aria-labelledby="alert-withaction-should-match-the-snapshot-0"
    aria-live="assertive"
    class="brd-c-hzAqKw brd-c-hzAqKw-lcPgHC-size-lg brd-c-hzAqKw-enADiq-variant-warning"
    role="alert"
  >
    <div
      class="brd-c-bZNrxE"
    >
      <div
        class="brd-c-deZXRM"
      >
        <div
          class="brd-c-jeVcRd"
          role="presentation"
        >
          <i
            data-testid="mock-icon-Caution"
          />
        </div>
        <div
          class="brd-c-fNvXDc"
          id="alert-withaction-should-match-the-snapshot-0"
        >
          <div
            class="brd-c-ehEcEk"
          >
            Complete your profile
          </div>
          <div
            class="brd-c-jUtCOJ"
          >
            Please complete your profile to allow us recommending personalized content to you.
          </div>
        </div>
        <div
          class="brd-c-lkAHsY"
        >
          <button
            class="brd-c-iYqWMG brd-c-iYqWMG-foEQdY-btnType-primary brd-c-iYqWMG-lKjfQ-size-md"
            role="button"
            type="button"
          >
            <span>
              View details
            </span>
          </button>
        </div>
        <button
          aria-label="Dismiss Button"
          class="brd-c-iYqWMG brd-c-iYqWMG-eWWUXK-btnType-text brd-c-iYqWMG-lKjfQ-size-md brd-c-PJLV"
          role="button"
          type="button"
        >
          <i
            data-testid="mock-icon-Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
